k8s-kustomize/overlays/dev/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment

# 기본 설정
metadata:
  name: devths-fe

# 스펙
spec:
  # Replica 개수
  replicas: 1

  # 라벨
  template:
    metadata:
      labels:
        environment: dev

    # 컨테이너 스펙
    spec:
      containers:
        - name: devths-fe

          # 자원 제한
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "400m"
