k8s-kustomize/overlays/dev/frontend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

# 기본 설정
metadata:
  name: frontend

# 스펙
spec:
  parentRefs:
    - name: devths-gateway
      namespace: nginx-gateway

  # 도메인 명
  hostnames:
    - "dev.devths.com"

  # 참조 규칙
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend-service-dev
          port: 80
